fixed image overflow

--- a/index.css
+++ b/index.css
@@ -160,7 +160,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 25wv;
+    width: 25vw;
     margin: 1em;
     padding: 2em;
 }
@@ -633,11 +633,20 @@ h2{
         border: 1px solid white;
         border-radius: 10px;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 25wv;
+        width: 25vw;
         margin: 1em;
         padding: 2em;
+    }
+
+    #projects h3{
+        border-radius: 15px;
+    }
+
+    #projects h3:hover{
+        background-color: rgba(255,255,255,0.15);
     }
     
     .project-cards h3{
@@ -650,6 +659,7 @@ h2{
         max-width: 100%;
         height: auto;
         object-fit: contain;
+        border-radius: 20px;
     }
     
     #contact{
